trying to fix blue line on iphone

--- a/main.css
+++ b/main.css
@@ -74,9 +74,11 @@ header {
     font-size: 18px;
     border-radius: 10px;
     cursor: pointer;
-    text-decoration: none;
 }
 
+a {
+    text-decoration: none;
+}
 
 li {
     list-style-type: none;
